--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -12,7 +12,7 @@
 
 .footer-links {
   display: flex;
-  gap: 1.7rem;
+  gap: 0.9rem;
   flex-wrap: wrap;
   justify-content: center;
 }
